# BusinessTool

./: .gitignore  .replit  admin.php  app.py  conexion.php  design_guidelines.md  edit.php  login.php  main.py  process_logo.py  pyproject.toml  replit.md  replit.nix  servicio.php  styles.css  temp.py  test_firebase.py  test_send_whatsapp.py  test_whatsapp_message.py  trabajos_listos.php  update_admin_password.py  update_passwords.py
app/: __init__.py  app.py  firebase_api.py  helpers.py  models.py  routes.py  routes.py.new  tasks.py  views.py
attached_assets/: Pasted--Descripci-n-del-Proyecto-Este-es-un-sistema-de-gesti-n-de-trabajos-para-FOTO-VIDEO-MOJICA--1739825213897.txt  Pasted--Generaci-n-y-Almacenamiento-del-C-digo-QR-Datos-a-incluir-Identificador-nico-Se-debe-incluir-un-1740262610192.txt  Pasted--Generaci-n-y-Almacenamiento-del-C-digo-QR-Datos-a-incluir-Identificador-nico-Se-debe-incluir-un-1740262649707.txt  Pasted-1-Correcci-n-de-errores-al-aprobar-un-trabajo-pendiente-Aseg-rate-de-que-el-proceso-de-aprobaci-n-d-1740166898033.txt  Pasted-2025-09-01-16-08-29-14-d8a05170-User-INFO-twilio-http-client-BEGIN-Twilio-API-Request-2025-1756757345257_1756757345259.txt  Pasted-Inicializando-la-base-de-datos-Error-en-la-inicializaci-n-psycopg2-errors-UndefinedColumn-colu-1739846490719.txt  Pasted-Necesito-agregar-un-m-dulo-nuevo-llamado-Empleado-del-M_1767757334075.txt  Pasted-UndefinedError-jinja2-exceptions-UndefinedError-stats-is-undefined-Traceback-most-recent-cal-1740098108484.txt
includes/: auth.php  footer.php  header.php
static/: firebase-messaging-sw.js
(+68 files in other folders)
