[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.38",
    "flask-wtf>=1.2.2",
    "werkzeug>=3.1.3",
    "flask-migrate>=4.1.0",
    "flask-mail>=0.10.0",
    "apscheduler>=3.11.0",
    "sendgrid>=6.11.0",
    "pytz>=2025.1",
    "flask-sse>=1.0.0",
    "redis>=5.2.1",
    "pyotp>=2.9.0",
    "qrcode>=8.0",
    "twilio>=9.4.5",
    "reportlab>=4.3.1",
    "openpyxl>=3.1.5",
    "weasyprint>=64.0",
    "cryptography>=44.0.1",
    "webauthn>=2.5.1",
]
